--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -222,18 +222,27 @@
                     android:layout_alignParentBottom="true"
                     android:visibility="gone" />
 
-                <com.whzl.mengbi.ui.widget.view.AutoScrollTextView2
-                    android:id="@+id/tv_run_way_broad"
+                <android.support.design.widget.CoordinatorLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:paddingBottom="3dp"
-                    android:paddingLeft="7dp"
-                    android:paddingRight="7dp"
-                    android:paddingTop="3dp"
-                    android:singleLine="true"
-                    android:textSize="12sp"
-                    android:visibility="visible" />
+                    android:layout_centerVertical="true">
+
+                    <com.whzl.mengbi.ui.widget.view.AutoScrollTextView2
+                        android:id="@+id/tv_run_way_broad"
+                        android:layout_width="1000dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:background="#702d2933"
+                        android:gravity="center_vertical"
+                        android:paddingBottom="3dp"
+                        android:paddingLeft="7dp"
+                        android:paddingRight="7dp"
+                        android:paddingTop="2dp"
+                        android:singleLine="true"
+                        android:textSize="12sp"
+                        android:visibility="gone" />
+                </android.support.design.widget.CoordinatorLayout>
 
                 <TextView
                     android:id="@+id/tv_count_down"
@@ -260,14 +269,21 @@
 
                 </FrameLayout>
 
-                <ImageButton
-                    android:id="@+id/ib_luck_wheel"
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
+                <!--<ImageButton-->
+                <!--android:id="@+id/ib_luck_wheel"-->
+                <!--android:layout_width="60dp"-->
+                <!--android:layout_height="60dp"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_marginRight="7dp"-->
+                <!--android:layout_marginTop="9dp"-->
+                <!--android:background="@null" />-->
+                <com.youth.banner.Banner
+                    android:id="@+id/banner"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="27dp"
-                    android:background="@null" />
+                    android:layout_marginRight="7dp"
+                    android:layout_marginTop="9dp" />
             </RelativeLayout>
         </LinearLayout>
 
