--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -322,4 +322,9 @@
 
     </style>
 
+    <style name="PackTab" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">#646464</item>
+        <item name="textAllCaps">true</item>
+    </style>
 </resources>
