--- a/app/src/main/res/layout/empty_prop.xml
+++ b/app/src/main/res/layout/empty_prop.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical">
-
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
