--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -161,4 +161,7 @@
     <color name="bg_broadcast_bottom">#702d2933</color>
     <color name="toast_shop">#d9d9d9</color>
     <color name="divider_color_pack">#e5e5e5</color>
+    <color name="text_color_use_pack">#2cd996</color>
+    <color name="text_color_wait_pack">#ff611b</color>
+
 </resources>
