--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -31,13 +31,13 @@
 
     <include layout="@layout/common_divider" />
 
-    <FrameLayout
+    <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="270dp"
         android:layout_marginTop="8dp">
 
-    </FrameLayout>
+    </android.support.v4.view.ViewPager>
 
     <View
         android:layout_width="match_parent"
