--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -156,7 +156,7 @@
             style="@style/me_tab"
             android:drawableTop="@drawable/selector_me_welfare"
             android:text="福利"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_bill"
