--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -11,11 +11,11 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@color/comm_white"
+        android:background="@color/white"
         app:tabGravity="fill"
         app:tabIndicatorColor="#20c78a"
         app:tabIndicatorHeight="2dp"
-        app:tabMode="scrollable"
+        app:tabMode="fixed"
         app:tabSelectedTextColor="#20c78a"
         app:tabTextAppearance="@style/PackTab"
         app:tabTextColor="#646464" />
@@ -24,5 +24,5 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/comm_white" />
+        android:background="@color/white" />
 </LinearLayout>
