--- a/app/src/main/res/layout/fragment_pull_refresh.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh.xml
@@ -7,7 +7,7 @@
     <FrameLayout
         android:id="@+id/fl_contain"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="wrap_content"
         android:visibility="gone" />
 
     <com.whzl.mengbi.ui.widget.view.PullRecycler
