--- a/app/src/main/res/layout/head_pretty_pack.xml
+++ b/app/src/main/res/layout/head_pretty_pack.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:background="@color/white"
+    android:background="@color/bg_color"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
