--- a/app/src/main/res/layout/pull_refresh_layout.xml
+++ b/app/src/main/res/layout/pull_refresh_layout.xml
@@ -12,7 +12,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
 
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
