--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -151,12 +151,37 @@
             android:text="背包"
             android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/tv_welfare"
-            style="@style/me_tab"
-            android:drawableTop="@drawable/selector_me_welfare"
-            android:text="福利"
-            android:visibility="visible" />
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+
+
+                <TextView
+                    android:id="@+id/tv_welfare"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:drawableTop="@drawable/selector_me_welfare"
+                    android:text="福利"
+                    android:textColor="@drawable/selector_me_text_color"
+                    android:textSize="13sp"
+                    android:visibility="visible" />
+
+                <View
+                    android:id="@+id/view_notify"
+                    android:layout_width="7dp"
+                    android:layout_height="7dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/shape_red_notify"
+                    android:visibility="invisible" />
+            </RelativeLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/tv_bill"
