--- a/app/src/main/res/drawable/shape_home_bottom_info_container.xml
+++ b/app/src/main/res/drawable/shape_home_bottom_info_container.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
- <corners android:bottomRightRadius="5dp" android:bottomLeftRadius="5dp"/>
-    <gradient android:startColor="#00cbcbcb" android:endColor="#88443f3f"
-        android:angle="270"/>
+    <corners
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp" />
+    <gradient
+        android:angle="270"
+        android:endColor="#88443f3f"
+        android:startColor="#00cbcbcb" />
 
 </shape>
