--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -9,6 +9,55 @@
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="44dp"
+        android:background="@drawable/login_edit_text_bg"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="24dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/ic_register_email" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="23dp"
+            android:layout_marginLeft="6dp"
+            android:background="@color/colorCommNotActive" />
+
+        <EditText
+            android:id="@+id/et_verify_code"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:gravity="center_vertical"
+            android:hint="@string/verify_code_hint"
+            android:inputType="phone"
+            android:maxLength="6"
+            android:textColorHint="#B9B9B9"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btn_get_verify_code"
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginBottom="1dp"
+            android:layout_weight="0"
+            android:background="@drawable/selector_register_verify_code_bg"
+            android:text="@string/get_verify_code"
+            android:textColor="#FEFEFE"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="44dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:background="@drawable/login_edit_text_bg"
@@ -45,9 +94,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="300dp"
@@ -87,12 +136,12 @@
             android:id="@+id/tv_psw_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="密码不能为纯数字，请重新输入"
-            android:visibility="invisible"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
+            android:text="密码不能为纯数字，请重新输入"
             android:textColor="#ff611b"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:visibility="invisible" />
     </LinearLayout>
 
     <Button
