--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -59,6 +59,8 @@
                         android:id="@+id/banner"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
+                        app:indicator_drawable_selected="@drawable/home_indicator_selected"
+                        app:indicator_drawable_unselected="@drawable/home_indicator_unselected"
                         app:layout_constraintDimensionRatio="H,3:1"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintLeft_toRightOf="parent" />
