--- a/app/src/main/res/layout/head_bill_pay.xml
+++ b/app/src/main/res/layout/head_bill_pay.xml
@@ -71,10 +71,10 @@
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
-            android:text="600"
             android:textColor="#ff6000"
             android:textSize="14sp" />
 
