--- a/app/src/main/res/layout/item_bill_pay.xml
+++ b/app/src/main/res/layout/item_bill_pay.xml
@@ -18,17 +18,17 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_busname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="购买物品"
             android:textColor="@color/text_view"
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/tv_goodName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:text="守护x1"
             android:textColor="@color/text_hint"
             android:textSize="12sp" />
     </LinearLayout>
@@ -40,23 +40,24 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2019-09-09"
             android:textColor="@color/text_hint"
             android:textSize="11sp" />
 
         <TextView
+            android:id="@+id/tv_coinnum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="2dp"
             android:layout_weight="1"
             android:gravity="end"
-            android:text="3000"
             android:textColor="#ff6000"
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_mengbi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="萌币"
