--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -36,6 +36,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.whzl.mengbi.ui.widget.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/scroll_view"
             android:layout_width="match_parent"
@@ -59,6 +63,8 @@
                         android:id="@+id/banner"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
+                        app:indicator_width="7dp"
+                        app:indicator_height="7dp"
                         app:indicator_drawable_selected="@drawable/home_indicator_selected"
                         app:indicator_drawable_unselected="@drawable/home_indicator_unselected"
                         app:layout_constraintDimensionRatio="H,3:1"
@@ -72,7 +78,9 @@
                     android:layout_height="38dp"
                     android:background="@color/white"
                     android:gravity="center_vertical"
-                    android:paddingLeft="18dp"
+                    android:paddingLeft="4dp"
+                    android:drawableLeft="@drawable/home_title_recommended"
+                    android:drawablePadding="4dp"
                     android:text="小编推荐"
                     android:textColor="#323232"
                     android:textSize="16sp"
@@ -84,7 +92,8 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:focusableInTouchMode="false"
-                    android:nestedScrollingEnabled="false">
+                    android:nestedScrollingEnabled="false"
+                    android:paddingBottom="14dp">
 
                 </android.support.v7.widget.RecyclerView>
 
@@ -94,7 +103,9 @@
                     android:layout_marginTop="12dp"
                     android:background="@color/white"
                     android:gravity="center_vertical"
-                    android:paddingLeft="18dp"
+                    android:paddingLeft="4dp"
+                    android:drawableLeft="@drawable/home_title_live"
+                    android:drawablePadding="4dp"
                     android:text="精彩直播"
                     android:textColor="#323232"
                     android:textSize="16sp"
@@ -107,13 +118,18 @@
                     android:layout_gravity="center_vertical"
                     android:background="@color/white"
                     android:focusableInTouchMode="false"
-                    android:nestedScrollingEnabled="false">
+                    android:nestedScrollingEnabled="false"
+                    android:paddingBottom="14dp"  >
 
                 </android.support.v7.widget.RecyclerView>
 
             </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
+
+        <com.whzl.mengbi.ui.widget.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 </LinearLayout>
