--- a/app/src/main/res/layout/item_anchor_home.xml
+++ b/app/src/main/res/layout/item_anchor_home.xml
@@ -2,38 +2,35 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="10dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_cover"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_is_live_mark"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/bg_home_state"
-        android:drawableLeft="@drawable/point_green"
-        android:drawablePadding="5dp"
-        android:paddingBottom="2dp"
-        android:paddingLeft="4dp"
-        android:paddingRight="4dp"
-        android:paddingTop="2dp"
-        android:text="直播"
-        android:textColor="@color/white"
-        android:textSize="11sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--<TextView-->
+        <!--android:id="@+id/tv_is_live_mark"-->
+        <!--android:visibility="gone"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginRight="12dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:background="@drawable/bg_home_state"-->
+        <!--android:drawableLeft="@drawable/point_green"-->
+        <!--android:drawablePadding="5dp"-->
+        <!--android:paddingBottom="2dp"-->
+        <!--android:paddingLeft="4dp"-->
+        <!--android:paddingRight="4dp"-->
+        <!--android:paddingTop="2dp"-->
+        <!--android:text="直播"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="11sp"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
 
     <ImageView
         android:id="@+id/iv_is_live_mark"
@@ -49,8 +46,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="24dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
         android:background="@drawable/shape_home_bottom_info_container"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -59,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="6dp"
             android:textColor="@color/white"
             android:textSize="12sp" />
 
@@ -69,9 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:drawableLeft="@drawable/ic_home_watch_status"
-            android:drawablePadding="5dp"
+            android:layout_marginRight="3dp"
             android:textColor="#F0F0F0"
             android:textSize="12sp" />
 
