--- a/app/src/main/res/layout/item_load_more_end.xml
+++ b/app/src/main/res/layout/item_load_more_end.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/divider_color"
+        android:visibility="invisible"
         android:layout_centerVertical="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"/>
