--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -284,6 +284,15 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="7dp"
                     android:layout_marginTop="9dp" />
+
+                <android.support.v4.view.ViewPager
+                    android:visibility="gone"
+                    android:id="@+id/vp_activity"
+                    android:layout_width="61dp"
+                    android:layout_height="108dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@id/banner"
+                    android:layout_marginTop="5dp" />
             </RelativeLayout>
         </LinearLayout>
 
