--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@color/white"
+        app:tabBackground="@android:color/transparent"
         app:tabGravity="fill"
         app:tabIndicatorColor="#20c78a"
         app:tabIndicatorHeight="2dp"
