--- a/app/src/main/res/layout/item_load_more_end.xml
+++ b/app/src/main/res/layout/item_load_more_end.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="55dp"
-    android:background="@color/appBg">
+    android:background="@color/white">
     
     <View
         android:layout_width="match_parent"
@@ -21,6 +21,5 @@
         android:textColor="#B9B9B9"
         android:textSize="15sp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:background="@color/appBg"/>
+        android:paddingRight="10dp"/>
 </RelativeLayout>
