--- a/app/src/main/res/drawable/shape_rounded_rectangle.xml
+++ b/app/src/main/res/drawable/shape_rounded_rectangle.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:topLeftRadius="9dp"
-        android:topRightRadius="9dp"
-        android:bottomLeftRadius="9dp"
-        android:bottomRightRadius="9dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#A1dd" />
+    <corners android:radius="10dp" />
 </shape>
