--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -52,26 +52,31 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <android.support.constraint.ConstraintLayout
-                    android:id="@+id/bannerLayout"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusableInTouchMode="true">
+                    android:layout_height="wrap_content">
 
-                    <com.youth.banner.Banner
-                        android:id="@+id/banner"
+                    <android.support.constraint.ConstraintLayout
+                        android:id="@+id/bannerLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_margin="3dp"
-                        app:indicator_drawable_selected="@drawable/home_indicator_selected"
-                        app:indicator_drawable_unselected="@drawable/home_indicator_unselected"
-                        app:indicator_height="7dp"
-                        app:indicator_width="7dp"
-                        app:layout_constraintDimensionRatio="H,3:1"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintLeft_toRightOf="parent" />
+                        android:layout_height="wrap_content"
+                        android:focusableInTouchMode="true">
 
-                </android.support.constraint.ConstraintLayout>
+                        <com.youth.banner.Banner
+                            android:id="@+id/banner"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_margin="5dp"
+                            app:indicator_drawable_selected="@drawable/home_indicator_selected"
+                            app:indicator_drawable_unselected="@drawable/home_indicator_unselected"
+                            app:indicator_height="7dp"
+                            app:indicator_width="7dp"
+                            app:layout_constraintDimensionRatio="H,3:1"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintLeft_toRightOf="parent" />
+
+                    </android.support.constraint.ConstraintLayout>
+                </RelativeLayout>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -79,7 +84,7 @@
                     android:drawableLeft="@drawable/home_title_recommended"
                     android:drawablePadding="4dp"
                     android:gravity="center_vertical"
-                    android:paddingLeft="4dp"
+                    android:paddingLeft="5dp"
                     android:text="小编推荐"
                     android:textColor="#323232"
                     android:textSize="16sp"
@@ -91,14 +96,14 @@
                     android:layout_height="wrap_content"
                     android:focusableInTouchMode="false"
                     android:nestedScrollingEnabled="false"
-                    android:paddingBottom="14dp">
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp">
 
                 </android.support.v7.widget.RecyclerView>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="38dp"
-                    android:layout_marginTop="12dp"
                     android:drawableLeft="@drawable/home_title_live"
                     android:drawablePadding="4dp"
                     android:gravity="center_vertical"
@@ -114,7 +119,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:focusableInTouchMode="false"
-                    android:nestedScrollingEnabled="false">
+                    android:nestedScrollingEnabled="false"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp">
 
                 </android.support.v7.widget.RecyclerView>
 
@@ -124,7 +131,8 @@
 
         <com.whzl.mengbi.ui.widget.ClassicsFooter
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:srlFinishDuration="0" />
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
