--- a/app/src/main/res/drawable/shape_home_bottom_info_container.xml
+++ b/app/src/main/res/drawable/shape_home_bottom_info_container.xml
@@ -8,8 +8,8 @@
         <!--android:endColor="#88443f3f"-->
         <!--android:startColor="#00cbcbcb" />-->
     <gradient
-        android:angle="270"
-        android:endColor="#9E9E9E"
-        android:startColor="#00DEDBDB " />
+        android:angle="90"
+        android:endColor="#00DBDBDB"
+        android:startColor="#DD9E9E9E " />
 
 </shape>
