--- a/app/src/main/res/drawable/bg_home_state.xml
+++ b/app/src/main/res/drawable/bg_home_state.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <stroke android:width="1dp" android:color="#f9f9f9"/>
-    <solid android:color="#b9b9b9"/>
+    <stroke android:width="0.01dp" android:color="#55f9f9f9"/>
+    <solid android:color="#55000000"/>
     <corners android:radius="10dp"/>
 </shape>
