--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#21D790</color>
     <color name="colorPrimaryDark">#20D790</color>
     <color name="colorCommNotActive">#B9B9B9</color>
+    <color name="colorLine">#F0F0F0</color>
 
     <color name="tab_checked">#21D996</color>
     <color name="tab_unchecked">#B9B9B9</color>
