--- a/app/src/main/res/drawable/shape_live_display_contribution_btn_bg.xml
+++ b/app/src/main/res/drawable/shape_live_display_contribution_btn_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp" />
-    <solid android:color="#f1275b" />
+    <solid android:color="#242b35" />
 </shape>
