--- a/app/src/main/res/drawable/shape_live_display_populartity_bg.xml
+++ b/app/src/main/res/drawable/shape_live_display_populartity_bg.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="14.5dp" />
-    <solid android:color="#404040" />
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval"
+    android:useLevel="false">
+    <solid android:color="#242b35" />
+    <stroke
+        android:width="1dp"
+        android:color="#242b35" />
 </shape>
