--- a/app/src/main/res/drawable/shape_live_follow_button.xml
+++ b/app/src/main/res/drawable/shape_live_follow_button.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
     <corners android:radius="17dp" />
-    <solid android:color="#242b35" />
-
+    <solid android:color="#ffd634" />
 </shape>
